unpackaged/main/default/objects/Account/fields/Classification_OffreProduit__c.field-meta.xml
<CustomField>
    <fullName>Classification_OffreProduit__c</fullName>
    <label>Classification_OffreProduit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>