unpackaged/main/default/objects/Account/fields/ClassificationCA_K1__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCA_K1__c</fullName>
    <label>ClassificationCA_K1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>