unpackaged/main/default/objects/Account/fields/ClassificationCA_K3__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCA_K3__c</fullName>
    <label>ClassificationCA_K3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>