unpackaged/main/default/objects/Account/fields/ClassificationCA_M__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCA_M__c</fullName>
    <description>Nombre de SAD ayant la classification &quot;M&quot; - utilisé pour automatiser l&#39;attribution du C.A concernant la classification</description>
    <label>ClassificationCA_M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>