unpackaged/main/default/objects/Account/fields/ClassificationCA_S__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCA_S__c</fullName>
    <description>Nombre de SAD ayant la classification &quot;S&quot; - utilisé pour automatiser l&#39;attribution du C.A concernant la classification</description>
    <label>ClassificationCA_S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>