unpackaged/main/default/objects/Account/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>