unpackaged/main/default/objects/Account/fields/Code_de_gestion__c.field-meta.xml
<CustomField>
    <fullName>Code_de_gestion__c</fullName>
    <label>Code de gestion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>