unpackaged/main/default/objects/Account/fields/Code_Postal_Facturation_Client__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Facturation_Client__c</fullName>
    <formula>Compte_de_facturation__r.CodePostal__c</formula>
    <label>Code Postal ( Facturation )</label>
    <type>Text</type>
</CustomField>