unpackaged/main/default/objects/Account/fields/CodeNAF__c.field-meta.xml
<CustomField>
    <fullName>CodeNAF__c</fullName>
    <label>Code NAF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>