unpackaged/main/default/objects/Account/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>Code Postal (-Facturation-)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>