unpackaged/main/default/objects/Account/fields/CodePostalExploitation__c.field-meta.xml
<CustomField>
    <fullName>CodePostalExploitation__c</fullName>
    <label>Code Postal (-Exploitation-)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>