unpackaged/main/default/objects/Account/fields/Commentaire_Statut__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Statut__c</fullName>
    <label>Commentaire Statut</label>
    <type>TextArea</type>
</CustomField>