unpackaged/main/default/objects/Account/fields/Commentaires_CM__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_CM__c</fullName>
    <label>Commentaires CM</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>