unpackaged/main/default/objects/Account/fields/Compte_avec_parcs__c.field-meta.xml
<CustomField>
    <fullName>Compte_avec_parcs__c</fullName>
    <formula>if
(

AND(Nb_Parcs__c &gt;0,NOT(ISBLANK(Nb_Parcs__c)))
,
true
,
false
)</formula>
    <label>Compte avec parcs</label>
    <type>Checkbox</type>
</CustomField>