unpackaged/main/default/objects/Account/fields/Compte_Client__c.field-meta.xml
<CustomField>
    <fullName>Compte_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte_Client</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>$Source.Statut__c</field>
            <operation>notEqual</operation>
            <value>Inactif</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes (Compte_Client)</relationshipLabel>
    <relationshipName>Compte_Client</relationshipName>
    <type>Lookup</type>
</CustomField>