unpackaged/main/default/objects/Account/fields/Compte_Master__c.field-meta.xml
<CustomField>
    <fullName>Compte_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Master</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <errorMessage>Problème d&#39;ssociation compte et ultimat</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Client, Compte - Noeud</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Client, Compte - Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Noeud</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Noeud</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites &amp; Comptes Enfants</relationshipLabel>
    <relationshipName>Sites_enfants</relationshipName>
    <type>Lookup</type>
</CustomField>