unpackaged/main/default/objects/Account/fields/Compte_Parent_legal__c.field-meta.xml
<CustomField>
    <fullName>Compte_Parent_legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Parent légal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes (Compte Parent légal)</relationshipLabel>
    <relationshipName>LegalParent</relationshipName>
    <type>Lookup</type>
</CustomField>