unpackaged/main/default/objects/Account/fields/Compte_strategique_Sant__c.field-meta.xml
<CustomField>
    <fullName>Compte_strategique_Sant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce compte est un compte stratégique Santé</description>
    <label>Compte stratégique Santé</label>
    <type>Checkbox</type>
</CustomField>