unpackaged/main/default/objects/Account/fields/Condition_de_R_glement_CEGID__c.field-meta.xml
<CustomField>
    <fullName>Condition_de_R_glement_CEGID__c</fullName>
    <label>Condition de Règlement CEGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>