unpackaged/main/default/objects/Account/fields/CotationPF__c.field-meta.xml
<CustomField>
    <fullName>CotationPF__c</fullName>
    <description>Grade de 1 à 10</description>
    <label>Grade Allianz</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>