unpackaged/main/default/objects/Account/fields/Count_nb_SAD__c.field-meta.xml
<CustomField>
    <fullName>Count_nb_SAD__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count nombre des SAD par compte</description>
    <label>Count nb SAD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>