unpackaged/main/default/objects/Account/fields/Count_Nombre_de_produits__c.field-meta.xml
<CustomField>
    <fullName>Count_Nombre_de_produits__c</fullName>
    <label>Count Nombre de produits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>