unpackaged/main/default/objects/Account/fields/Count_parcs__c.field-meta.xml
<CustomField>
    <fullName>Count_parcs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if admin wants to include this account on the count of assets.</description>
    <label>Count parcs</label>
    <type>Checkbox</type>
</CustomField>