unpackaged/main/default/objects/Account/fields/count_potentiel_container__c.field-meta.xml
<CustomField>
    <fullName>count_potentiel_container__c</fullName>
    <label>count potentiel container</label>
    <summaryForeignKey>PotentielContainers__c.CompteRaisonSociale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>