unpackaged/main/default/objects/Account/fields/count_potentiel_frigo__c.field-meta.xml
<CustomField>
    <fullName>count_potentiel_frigo__c</fullName>
    <label>count potentiel frigo</label>
    <summaryForeignKey>PotentielVehiculesFrigorifiques__c.CompteRaisonSociale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>