unpackaged/main/default/objects/Account/fields/count_potentiel_meuble__c.field-meta.xml
<CustomField>
    <fullName>count_potentiel_meuble__c</fullName>
    <label>count potentiel meuble</label>
    <summaryForeignKey>PotentielMeubles__c.CompteRaisonSociale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>