unpackaged/main/default/objects/Account/fields/count_potentiel_sec__c.field-meta.xml
<CustomField>
    <fullName>count_potentiel_sec__c</fullName>
    <label>count potentiel sec</label>
    <summaryForeignKey>PotentielVehiculesSecs__c.CompteRaisonSociale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>