unpackaged/main/default/objects/Account/fields/Credit_decision_status__c.field-meta.xml
<CustomField>
    <fullName>Credit_decision_status__c</fullName>
    <formula>If(API_Connector__Credit_Rating__c=&quot;&quot;,&quot;&quot;,
If(Right( API_Connector__Credit_Rating__c ,1)=&quot;1&quot; || Right(API_Connector__Credit_Rating__c,1)=&quot;2&quot; ,IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),
If(Right(API_Connector__Credit_Rating__c,1)=&quot;3&quot; ,IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit decision status</label>
    <type>Text</type>
</CustomField>