unpackaged/main/default/objects/Account/fields/DateAgrementEH__c.field-meta.xml
<CustomField>
    <fullName>DateAgrementEH__c</fullName>
    <label>Date d&#39;agrément</label>
    <type>Date</type>
</CustomField>