unpackaged/main/default/objects/Account/fields/DateCotationPF__c.field-meta.xml
<CustomField>
    <fullName>DateCotationPF__c</fullName>
    <label>Date de grade Allianz</label>
    <type>Date</type>
</CustomField>