unpackaged/main/default/objects/Account/fields/DateDeLaDerniereModificationReelle__c.field-meta.xml
<CustomField>
    <fullName>DateDeLaDerniereModificationReelle__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Date de la dernière modification réelle</label>
    <type>DateTime</type>
</CustomField>