unpackaged/main/default/objects/Account/fields/DateMAJEH__c.field-meta.xml
<CustomField>
    <fullName>DateMAJEH__c</fullName>
    <label>Date MAJ EH</label>
    <type>Date</type>
</CustomField>