unpackaged/main/default/objects/Account/fields/DB_Adresse_Code_Etat__c.field-meta.xml
<CustomField>
    <fullName>DB_Adresse_Code_Etat__c</fullName>
    <label>Adresse Code Etat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>