unpackaged/main/default/objects/Account/fields/DB_Adresse_Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>DB_Adresse_Code_Postal__c</fullName>
    <label>Adresse Code Postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>