unpackaged/main/default/objects/Account/fields/DB_Adresse_Ligne2__c.field-meta.xml
<CustomField>
    <fullName>DB_Adresse_Ligne2__c</fullName>
    <label>Adresse ligne2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>