unpackaged/main/default/objects/Account/fields/DB_Adresse_Pays__c.field-meta.xml
<CustomField>
    <fullName>DB_Adresse_Pays__c</fullName>
    <label>Adresse Pays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>