unpackaged/main/default/objects/Account/fields/DB_Adresse_Ville__c.field-meta.xml
<CustomField>
    <fullName>DB_Adresse_Ville__c</fullName>
    <label>Adresse Ville</label>
    <length>255</length>
    <type>Text</type>
</CustomField>