unpackaged/main/default/objects/Account/fields/DB_Autre_Identifiant_National__c.field-meta.xml
<CustomField>
    <fullName>DB_Autre_Identifiant_National__c</fullName>
    <label>ID national 2 (Valeur)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>