unpackaged/main/default/objects/Account/fields/DB_CA_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_CA_DU__c</fullName>
    <label>CA DU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>