unpackaged/main/default/objects/Account/fields/DB_Charter_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_Charter_Type__c</fullName>
    <label>Charter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>