unpackaged/main/default/objects/Account/fields/DB_Code_Activite__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Activite__c</fullName>
    <label>Code Activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>