unpackaged/main/default/objects/Account/fields/DB_Code_Activite_NACE__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Activite_NACE__c</fullName>
    <label>Code Activité NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>