unpackaged/main/default/objects/Account/fields/DB_Code_Activite_NAF__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Activite_NAF__c</fullName>
    <label>Code Activité NAF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>