unpackaged/main/default/objects/Account/fields/DB_Code_Activite_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Activite_SIC_Description__c</fullName>
    <label>Code Activité SIC (Description)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>