unpackaged/main/default/objects/Account/fields/DB_Code_Charter_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Charter_Type__c</fullName>
    <label>Code Carte Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>