unpackaged/main/default/objects/Account/fields/DB_Code_Forme_Juridique_Generale__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Forme_Juridique_Generale__c</fullName>
    <label>Code forme juridique globale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>