unpackaged/main/default/objects/Account/fields/DB_Code_Langue_Dirigeant__c.field-meta.xml
<CustomField>
    <fullName>DB_Code_Langue_Dirigeant__c</fullName>
    <label>Code langue du dirigeant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>