unpackaged/main/default/objects/Account/fields/DB_CodePays_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_CodePays_GU__c</fullName>
    <label>Code Pays GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>