unpackaged/main/default/objects/Account/fields/DB_CodePays_Parent__c.field-meta.xml
<CustomField>
    <fullName>DB_CodePays_Parent__c</fullName>
    <label>Code Pays Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>