unpackaged/main/default/objects/Account/fields/DB_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_Control_Type__c</fullName>
    <label>Control Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>