unpackaged/main/default/objects/Account/fields/DB_Date_Debut_activite__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_Debut_activite__c</fullName>
    <label>Date de début d&#39;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>