unpackaged/main/default/objects/Account/fields/DB_Date_debut_Forme_Juridique_Globale__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_debut_Forme_Juridique_Globale__c</fullName>
    <label>Date De Début Forme Juridique Globale</label>
    <type>TextArea</type>
</CustomField>