unpackaged/main/default/objects/Account/fields/DB_Date_Delinquency_Score_Description__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_Delinquency_Score_Description__c</fullName>
    <label>Date Delinquency Score Description</label>
    <type>TextArea</type>
</CustomField>