unpackaged/main/default/objects/Account/fields/DB_Date_EMMA_Score__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_EMMA_Score__c</fullName>
    <label>Date EMMA Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>