unpackaged/main/default/objects/Account/fields/DB_Date_NB_Employes_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_NB_Employes_GU__c</fullName>
    <label>Date NB Employés GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>