unpackaged/main/default/objects/Account/fields/DB_Date_Rating__c.field-meta.xml
<CustomField>
    <fullName>DB_Date_Rating__c</fullName>
    <label>Date rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>