unpackaged/main/default/objects/Account/fields/DB_Delinquency_Score__c.field-meta.xml
<CustomField>
    <fullName>DB_Delinquency_Score__c</fullName>
    <label>Delinquency score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>