unpackaged/main/default/objects/Account/fields/DB_Description_activite__c.field-meta.xml
<CustomField>
    <fullName>DB_Description_activite__c</fullName>
    <label>Description Activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>