unpackaged/main/default/objects/Account/fields/DB_DUNS_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS_DU__c</fullName>
    <label>DUNS# DU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>