unpackaged/main/default/objects/Account/fields/DB_DUNS_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS_GU__c</fullName>
    <label>DUNS# GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>