unpackaged/main/default/objects/Account/fields/DB_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS_Number__c</fullName>
    <label>D-U-N-S Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>