unpackaged/main/default/objects/Account/fields/DB_DUNS_Parent__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS_Parent__c</fullName>
    <label>DUNS# Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>