unpackaged/main/default/objects/Account/fields/DB_DUNS_transfered__c.field-meta.xml
<CustomField>
    <fullName>DB_DUNS_transfered__c</fullName>
    <label>DB_DUNS_transfered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>