unpackaged/main/default/objects/Account/fields/DB_Effectif__c.field-meta.xml
<CustomField>
    <fullName>DB_Effectif__c</fullName>
    <label>Effectif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>