unpackaged/main/default/objects/Account/fields/DB_Effectif_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_Effectif_Date__c</fullName>
    <label>Effectif (date)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>