unpackaged/main/default/objects/Account/fields/DB_Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>DB_Email_Contact__c</fullName>
    <label>Email Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>