unpackaged/main/default/objects/Account/fields/DB_EMMA_Score__c.field-meta.xml
<CustomField>
    <fullName>DB_EMMA_Score__c</fullName>
    <label>EMMA score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>