unpackaged/main/default/objects/Account/fields/DB_FIabilite_CA_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_FIabilite_CA_DU__c</fullName>
    <label>Fiabilité CA DU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>