unpackaged/main/default/objects/Account/fields/DB_FIabilite_CA_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_FIabilite_CA_GU__c</fullName>
    <label>Fiabilité CA GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>