unpackaged/main/default/objects/Account/fields/DB_Fiabilite_Employes_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Fiabilite_Employes_GU__c</fullName>
    <label>Fiabilité Employés GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>