unpackaged/main/default/objects/Account/fields/DB_Followed_up__c.field-meta.xml
<CustomField>
    <fullName>DB_Followed_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followed up DB</label>
    <type>Checkbox</type>
</CustomField>