unpackaged/main/default/objects/Account/fields/DB_Forme_Juridique_Generale__c.field-meta.xml
<CustomField>
    <fullName>DB_Forme_Juridique_Generale__c</fullName>
    <label>Forme juridique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>