unpackaged/main/default/objects/Account/fields/DB_Forme_Juridique_Globale__c.field-meta.xml
<CustomField>
    <fullName>DB_Forme_Juridique_Globale__c</fullName>
    <label>Forme Juridique Globale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>