unpackaged/main/default/objects/Account/fields/DB_Limite_Credit_Max_Reco__c.field-meta.xml
<CustomField>
    <fullName>DB_Limite_Credit_Max_Reco__c</fullName>
    <label>Limite de credit Max Reco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>