unpackaged/main/default/objects/Account/fields/DB_Monnaie_CA__c.field-meta.xml
<CustomField>
    <fullName>DB_Monnaie_CA__c</fullName>
    <label>Monnaie CA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>