unpackaged/main/default/objects/Account/fields/DB_Monnaie_CA_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Monnaie_CA_GU__c</fullName>
    <label>Monnaie CA GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>