unpackaged/main/default/objects/Account/fields/DB_NB_Employes_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_NB_Employes_DU__c</fullName>
    <label>NB Employés DU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>