unpackaged/main/default/objects/Account/fields/DB_NB_Entite_Arborescence__c.field-meta.xml
<CustomField>
    <fullName>DB_NB_Entite_Arborescence__c</fullName>
    <label>NB d&#39;entités dans l&#39;arborescence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>