unpackaged/main/default/objects/Account/fields/DB_Nom_Commercial__c.field-meta.xml
<CustomField>
    <fullName>DB_Nom_Commercial__c</fullName>
    <label>Nom Commercial Société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>