unpackaged/main/default/objects/Account/fields/DB_Nom_Local_Dirigeant__c.field-meta.xml
<CustomField>
    <fullName>DB_Nom_Local_Dirigeant__c</fullName>
    <label>Nom local du dirigeant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>