unpackaged/main/default/objects/Account/fields/DB_Pays_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Pays_GU__c</fullName>
    <label>Pays GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>