unpackaged/main/default/objects/Account/fields/DB_Perimetre_CA_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Perimetre_CA_GU__c</fullName>
    <label>Périmètre CA GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>