unpackaged/main/default/objects/Account/fields/DB_Perimetre_Employes_DU__c.field-meta.xml
<CustomField>
    <fullName>DB_Perimetre_Employes_DU__c</fullName>
    <label>Périmètre Employés DU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>