unpackaged/main/default/objects/Account/fields/DB_Prenom_Dirigeant__c.field-meta.xml
<CustomField>
    <fullName>DB_Prenom_Dirigeant__c</fullName>
    <label>Prenom du dirigeant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>