unpackaged/main/default/objects/Account/fields/DB_Raison_Sociale_GU__c.field-meta.xml
<CustomField>
    <fullName>DB_Raison_Sociale_GU__c</fullName>
    <label>Raison Sociale GU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>