unpackaged/main/default/objects/Account/fields/DB_Rating__c.field-meta.xml
<CustomField>
    <fullName>DB_Rating__c</fullName>
    <label>Rating DB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>