unpackaged/main/default/objects/Account/fields/DB_Rating_AAA_Nordic__c.field-meta.xml
<CustomField>
    <fullName>DB_Rating_AAA_Nordic__c</fullName>
    <label>Rating AAA Nordic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>