unpackaged/main/default/objects/Account/fields/DB_RecordType_to_create__c.field-meta.xml
<CustomField>
    <fullName>DB_RecordType_to_create__c</fullName>
    <label>Type d&#39;enregistrement à créer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>