unpackaged/main/default/objects/Account/fields/DB_Role_Arborescence__c.field-meta.xml
<CustomField>
    <fullName>DB_Role_Arborescence__c</fullName>
    <label>Rôles dans l&#39;arborescence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>