unpackaged/main/default/objects/Account/fields/DB_Score_Defaillance__c.field-meta.xml
<CustomField>
    <fullName>DB_Score_Defaillance__c</fullName>
    <label>Score défaillance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>