unpackaged/main/default/objects/Account/fields/DB_Segment_Risque__c.field-meta.xml
<CustomField>
    <fullName>DB_Segment_Risque__c</fullName>
    <label>Segment risque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>