unpackaged/main/default/objects/Account/fields/DB_Statut_Activite__c.field-meta.xml
<CustomField>
    <fullName>DB_Statut_Activite__c</fullName>
    <label>Status d&#39;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>